Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/apply_pair_2_reconstruct.st
language core;

extend with #type-reconstruction, #pairs;

fn main(f : Nat) -> {Nat, auto} {
    return {f, f(0)}
}